--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,16 +7,17 @@
 # be requested for review when someone opens a pull request.
 # order is alphabetical for easier maintenance.
 #
-# Pooja Prasannakumar (kumarp20)
+# Alexander Hoppe (hoppea2)
+# Arindam Datta (dattaarindam)
 # Bahubali Jain (bahubali-jain)
 # Francis Nijay (francis-nijay)
 # Harish P (harishp8889)
-# Shanmugapriya M (spriya-m)
+# Pooja Prasannakumar (kumarp20)
 # Prsanna Muthukumaraswamy (prablr79)
-# Alexander Hoppe (hoppea2)
+# Shanmugapriya M (spriya-m)
 # Trevor Dawe (tdawe)
 # Florian Coulombel (coulof)
-# Arindam Datta (dattaarindam)
+ 
 
 # for all files:
-* @kumarp20 @bahubali-jain @francis-nijay @harishp8889 @spriya-m @prablr79 @hoppea2 @tdawe @coulof @dattaarindam
+* @kumarp20 @bpjain2004 @francis-nijay @harishp8889 @spriya-m @prablr79 @hoppea2 @tdawe @coulof @dattaarindam
