--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,9 +1,9 @@
 name: Workflow
 on:
   push:
-    branches: [ gosec-updates ]
+    branches: [ main ]
   pull_request:
-    branches: [ gosec-updates ]
+    branches: [ main ]
 jobs:
   code-check:
     name: Check Go formatting, linting, vetting
