--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -29,15 +29,12 @@
 # Francis Nijay (francis-nijay)
 # Harish P (harishp8889)
 # Leonard Ulman (Leonard-Dell)
-# Marcin Trajfacki (mtrajfacki-dell)
 # Marek Suski (mareksuski-dell)
-# Mateusz Urbanek (shanduur-dell)
 # Małgorzata Dutka (mdutka-dell)
 # Pooja Prasannakumar (kumarp20)
 # Prsanna Muthukumaraswamy (prablr79)
-# Shanmugapriya M (spriya-m)
 # Trevor Dawe (tdawe)
  
 
 # for all files:
-* @kumarp20 @bpjain2004 @francis-nijay @harishp8889 @spriya-m @prablr79 @hoppea2 @tdawe @coulof @shaynafinocchiaro @sharmilarama @isaiasA1 @arnchiequ-dell @alikdell @atye @adamginna-dell @cbartoszDell @bogdanNovikovDell @Leonard-Dell @mtrajfacki-dell @mareksuski-dell @shanduur-dell @mdutka-dell
+* @kumarp20 @bpjain2004 @francis-nijay @harishp8889 @prablr79 @hoppea2 @tdawe @coulof @shaynafinocchiaro @sharmilarama @isaiasA1 @arnchiequ-dell @alikdell @atye @adamginna-dell @cbartoszDell @bogdanNovikovDell @Leonard-Dell @mareksuski-dell @mdutka-dell
