--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -34,7 +34,12 @@
 # Pooja Prasannakumar (kumarp20)
 # Prsanna Muthukumaraswamy (prablr79)
 # Trevor Dawe (tdawe)
+# Luna Xu (xuluna)
+# Peres Kereotubo (PeresKereotubo)
+# Emily Kinuthia (EmilyKatdell)
+# Kerry Kovacevic (KerryKovacevic)
+# Evgeny Uglov (EvgenyUglov)
  
 
 # for all files:
-* @kumarp20 @bpjain2004 @francis-nijay @harishp8889 @prablr79 @hoppea2 @tdawe @coulof @shaynafinocchiaro @sharmilarama @isaiasA1 @arnchiequ-dell @alikdell @atye @adamginna-dell @cbartoszDell @bogdanNovikovDell @Leonard-Dell @mareksuski-dell @mdutka-dell
+* @kumarp20 @bpjain2004 @francis-nijay @harishp8889 @prablr79 @hoppea2 @tdawe @coulof @shaynafinocchiaro @sharmilarama @xuluna @PeresKereotubo @alikdell @atye @adamginna-dell @cbartoszDell @bogdanNovikovDell @Leonard-Dell @mareksuski-dell @mdutka-dell @EmilyKatdell @KerryKovacevic @EvgenyUglov
