--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,13 +2,12 @@ name: Release GoFSUtil
 # Invocable as a reusable workflow
 # Can be manually triggered
 on:
-  workflow_call: 
+  workflow_call:
   workflow_dispatch:
     inputs:
       version:
-        description: 'Version to release (major, minor, patch)'
+        description: 'Version to release (major, minor, patch) Ex: 1.0.0'
         required: true
-        default: 'none'
 jobs:
   csm-release:
     uses: dell/common-github-actions/.github/workflows/csm-release-libs.yaml@main
