--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -35,11 +35,10 @@
 # Samihan Deshmukh (samihan-dell)
 # Trevor Dawe (tdawe)
 # Luna Xu (xuluna)
-# Emily Kinuthia (EmilyKatdell)
 # Kerry Kovacevic (KerryKovacevic)
 # Evgeny Uglov (EvgenyUglov)
 
  
 
 # for all files:
-* @kumarp20 @bpjain2004 @francis-nijay @harishp8889 @prablr79 @hoppea2 @tdawe @coulof @shaynafinocchiaro @sharmilarama @xuluna @alikdell @atye @EmilyKatdell @KerryKovacevic @EvgenyUglov @niranjan-n1 @samihan-dell @chaganti-rajitha @alankar-verma @khareRajshree @satyakonduri
+* @kumarp20 @bpjain2004 @francis-nijay @harishp8889 @prablr79 @hoppea2 @tdawe @coulof @shaynafinocchiaro @sharmilarama @xuluna @alikdell @atye @KerryKovacevic @EvgenyUglov @niranjan-n1 @samihan-dell @chaganti-rajitha @alankar-verma @khareRajshree @satyakonduri
