--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,12 @@ on:  # yamllint disable-line rule:truthy
       version:
         description: 'Version to release (major, minor, patch) Ex: 1.0.0'
         required: true
+  repository_dispatch:
+    types: [release-go-libs]
 jobs:
   csm-release:
     uses: dell/common-github-actions/.github/workflows/csm-release-libs.yaml@main
     name: Release Go Client Libraries
+    with:
+      version: "${{ github.event.inputs.option || 'minor' }}"
+    secrets: inherit
