--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -19,7 +19,6 @@
 # be requested for review when someone opens a pull request.
 # order is alphabetical for easier maintenance.
 #
-# Alankar Verma (alankar-verma)
 # Alexander Hoppe (hoppea2)
 # Arindam Datta (dattaarindam)
 # Bahubali Jain (bahubali-jain)
@@ -38,7 +37,6 @@
 # Kerry Kovacevic (KerryKovacevic)
 # Evgeny Uglov (EvgenyUglov)
 
- 
 
 # for all files:
-* @kumarp20 @bpjain2004 @francis-nijay @harishp8889 @prablr79 @hoppea2 @tdawe @coulof @shaynafinocchiaro @sharmilarama @xuluna @alikdell @atye @KerryKovacevic @EvgenyUglov @niranjan-n1 @samihan-dell @chaganti-rajitha @alankar-verma @khareRajshree @satyakonduri
+* @kumarp20 @bpjain2004 @francis-nijay @harishp8889 @prablr79 @hoppea2 @tdawe @coulof @shaynafinocchiaro @sharmilarama @xuluna @alikdell @atye @KerryKovacevic @EvgenyUglov @niranjan-n1 @samihan-dell @chaganti-rajitha @khareRajshree @satyakonduri
