--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -34,9 +34,8 @@
 # Samihan Deshmukh (samihan-dell)
 # Trevor Dawe (tdawe)
 # Luna Xu (xuluna)
-# Kerry Kovacevic (KerryKovacevic)
 # Evgeny Uglov (EvgenyUglov)
 
 
 # for all files:
-* @kumarp20 @bpjain2004 @francis-nijay @harishp8889 @prablr79 @hoppea2 @tdawe @coulof @shaynafinocchiaro @sharmilarama @xuluna @alikdell @atye @KerryKovacevic @EvgenyUglov @niranjan-n1 @samihan-dell @chaganti-rajitha @khareRajshree @satyakonduri
+* @kumarp20 @bpjain2004 @francis-nijay @harishp8889 @prablr79 @hoppea2 @tdawe @coulof @shaynafinocchiaro @sharmilarama @xuluna @alikdell @atye @EvgenyUglov @niranjan-n1 @samihan-dell @chaganti-rajitha @khareRajshree @satyakonduri
