--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -19,27 +19,23 @@
 # be requested for review when someone opens a pull request.
 # order is alphabetical for easier maintenance.
 #
-# Adam Ginna (adamginna-dell)
 # Alexander Hoppe (hoppea2)
 # Arindam Datta (dattaarindam)
 # Bahubali Jain (bahubali-jain)
-# Bartosz Ciesielczyk (cbartoszDell)
-# Bogdan Novikov (bogdanNovikovDell)
+# Chaganti Rajitha (chaganti-rajitha)
 # Florian Coulombel (coulof)
 # Francis Nijay (francis-nijay)
 # Harish P (harishp8889)
-# Leonard Ulman (Leonard-Dell)
-# Marek Suski (mareksuski-dell)
-# Małgorzata Dutka (mdutka-dell)
+# Konduri Satya Narayana (satyakonduri)
+# Niranjan N (niranjan-n1)
 # Pooja Prasannakumar (kumarp20)
 # Prsanna Muthukumaraswamy (prablr79)
+# Rajshree Khare (khareRajshree)
+# Samihan Deshmukh (samihan-dell)
 # Trevor Dawe (tdawe)
 # Luna Xu (xuluna)
-# Peres Kereotubo (PeresKereotubo)
-# Emily Kinuthia (EmilyKatdell)
-# Kerry Kovacevic (KerryKovacevic)
 # Evgeny Uglov (EvgenyUglov)
- 
+
 
 # for all files:
-* @kumarp20 @bpjain2004 @francis-nijay @harishp8889 @prablr79 @hoppea2 @tdawe @coulof @shaynafinocchiaro @sharmilarama @xuluna @PeresKereotubo @alikdell @atye @adamginna-dell @cbartoszDell @bogdanNovikovDell @Leonard-Dell @mareksuski-dell @mdutka-dell @EmilyKatdell @KerryKovacevic @EvgenyUglov
+* @kumarp20 @bpjain2004 @francis-nijay @harishp8889 @prablr79 @hoppea2 @tdawe @coulof @shaynafinocchiaro @sharmilarama @xuluna @alikdell @atye @EvgenyUglov @niranjan-n1 @samihan-dell @chaganti-rajitha @khareRajshree @satyakonduri
