--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,9 +5,15 @@ on:  # yamllint disable-line rule:truthy
   workflow_call:
   workflow_dispatch:
     inputs:
-      version:
-        description: 'Version to release (major, minor, patch) Ex: 1.0.0'
+      option:
+        description: 'Select version to release'
         required: true
+        type: choice
+        default: 'minor'
+        options:
+          - major
+          - minor
+          - patch
   repository_dispatch:
     types: [release-go-libs]
 jobs:
